--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>hello</div>
+    <div id="popup-container" class="draggable container">
+        <h1>Password Generator</h1>
+
+        <div class="inputbox">
+            <input type="text" class="passbox" disabled>
+        </div>
+
+        <input type="range" min="1" max="30" value="5" >
+
+
+
+
+
+    </div>
 
 
 
