--- a/popup.html
+++ b/popup.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link  rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" /> <!--for copy button-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> <!--FOR TICK BUTTON-->
 </head>
 <body>
     <div id="popup-container" class="draggable container">
         <h1>Password Generator</h1>
-
         <div class="inputbox">
             <input type="text" class="passbox" id="passwbox" disabled>
+            <span id="copyicon" class="material-symbols-outlined">
+                content_copy
+                </span>
         </div>
 
         <input class="custom-slider" id="slider" type="range" min="1" max="30" value="5" >
